updated delivery method enums

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -222,6 +222,9 @@
     "PickupTheGoodsWithoutPayment": "Pickup The Goods Without Payment",
     "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
     "BlackCatHomeDelivery": "Black Cat Home Delivery",
+    "PostOffice": "Post Office",
+    "SelfPickup": "Self Pickup",
+    "BlackCat": "Black Cat",
     "HomeDelivery": "Home Delivery",
     "OrderItems": "Order Items",
     "Address": "Address",
