--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -269,7 +269,10 @@
     "CellphoneInvoice": "Cellphone Invoice",
     "BusinessInvoice": "Business Invoice",
     "SaveChanges": "Save Changes",
-    "HomeDelivery": "宅配",
+    "PostOffice": "郵局",
+    "SelfPickup": "自取",
+    "BlackCat": "黑貓",
+    "HomeDelivery": "親送",
     "OrderCreated": "訂單成立",
     "Telephone": "電話",
     "Quantity": "數量",
