changed short code restriction

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -170,6 +170,7 @@
     "SaveSortOrder": "Save Sort Order",
     "AreYouSureToUpdateSortOrder": "Are You Sure You Want To Update Sort Order?",
     "EnterprisePurchase": "Enterprise Purchase",
+    "ShortCodePatternDoesnotMatch": "Short Code Pattern Does not Match! Only Letters and Numbers are allowed and Length must be between 4 and 12",
 
     //SetItem
     "SetItem": "Set Item",
