--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -4,7 +4,7 @@
     "GoodPoint": "Good Point",
     "Menu:Home": "Home",
     "Menu:GroupBuyManagement": "Group Buy Management",
-    "Menu:GroupBuyListView": "Group Buy ListView",
+    "Menu:GroupBuyListView": "Group Buy List View",
     "Menu:GroupBuyReports": "Group Buy Reports",
     "Menu:GroupBuyPageConfig": "GroupBuy Page Config",
     "Menu:FreebiesListView": "Freebies List View",
@@ -14,6 +14,14 @@
     "Menu:OrderManagement": "Order Management",
     "Menu:PaymentManagement": "Payment Management",
     "Menu:LogisticsManagement": "Logistics Management",
+    "Menu:InventoryReport": "Inventory Report",
+    "Menu:ReturnAndExchangeOrder": "Return & Exchange Order",
+    "Menu:ElectronicInvoiceSetting": "Electronic Invoice Settings",
+    "Menu:CashFlowReconciliationStatement": "Cash Flow Reconciliation Statement",
+    "Menu:LogisticsProviderSettings": "Logistics Provider Settings",
+    "Menu:DeliveryTemperatureCost": "Delivery Temperature Cost",
+    "Menu:SystemManagement": "System Management",
+    "Menu:TenantBillingReport": "Tenant Billing Report",
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Permission:GroupBuyList": "Group Buy List",
