delivery temperature cost fix for store

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -124,7 +124,7 @@
     "Normal": "Normal",
     "Freeze": "Freeze",
     "Frozen": "Frozen",
-
+    "DeliveryTemperatureCost": "Delivery Temperature Cost",
 
     //GroupBuy
     "NewGroupBuy": "New Group Buy",
