--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -400,6 +400,12 @@
     "Mazu": "Mazu",
     "AreYouSureToUpdateGreenWorld?": "Are You Sure To Update Green World Logistics?",
     "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?",
-    "ShortCode": "Short Code"
+    "ShortCode": "Short Code",
+    "Search": "Search",
+    "MinAvailableTime": "Minimum Available Time",
+    "MaxAvailableTime": "Maximum Available Time",
+    "EnterItemName": "Enter Item Name",
+    "Display": "Display",
+    "Results": "Results"
   }
 }
