--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -406,6 +406,8 @@
     "MaxAvailableTime": "Maximum Available Time",
     "EnterItemName": "Enter Item Name",
     "Display": "Display",
-    "Results": "Results"
+    "Results": "Results",
+    "Filter": "Filter",
+    "Reset": "Reset"
   }
 }
