--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -91,7 +91,7 @@
     "Pikachu:ItemDetailsCannotBeEmpty": "Item Details can not be empty",
     "Pikachu:ItemWithSKUAlreadyExists": "Item with same SKU already exists",
     "Pikachu:SKUForItemDetailsCannotBeNull": "SKU for Item Detail Cannot be null",
-    "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "Selling Price for Items should be greater than 0",
+    "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "Selling Price for Items Should Be Equal Or Greater Than 0",
     "CopyToAll": "Copy To All",
     "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
     "GenerateSKU": "Generate SKU",
