--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -422,6 +422,7 @@
     "Results": "項結果",
     "Availability": "上架",
     "Filter": "篩選",
-    "Reset": "重置"
+    "Reset": "重置",
+    "Pikachu:GroupBuyShortCodeCannotBeNull": "團購短碼不能為空"
   }
 }
