--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -414,6 +414,11 @@
     "Cm0001": "0001: 60cm",
     "Cm0002": "0002: 90cm",
     "Cm0003": "0003: 120cm",
-    "Cm0004": "0004: 150cm"
+    "Cm0004": "0004: 150cm",
+
+    "SevenToEleven1": "7-11",
+    "SevenToElevenC2C": "7-11 C2C",
+    "FamilyMart1": "Family Mart",
+    "FamilyMartC2C": "Family Mart C2C"
   }
 }
