--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -428,6 +428,8 @@
     "PleaseContactUs": "Please contact us",
     "Before13PM": "Before 13p.m",
     "Between14To18PM": "14-18 p.m",
-    "Inapplicable": "Inapplicable"
+    "Inapplicable": "Inapplicable",
+    "RecipientPostalCode": "Recipient Postal Code",
+    "RecipientCity": "Recipient City"
   }
 }
