--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -91,6 +91,11 @@
     "Pikachu:ItemDetailsCannotBeEmpty": "Item Details can not be empty",
     "Pikachu:ItemWithSKUAlreadyExists": "Item with same SKU already exists",
     "Pikachu:SKUForItemDetailsCannotBeNull": "SKU for Item Detail Cannot be null",
+    "Pikachu:AtLeastOnePaymentMethodIsRequired": "AtLeast One Payment Method Is Required",
+    "Pikachu:AtLeastOneShippingMethodIsRequired": "AtLeast One Shipping Method Is Required",
+    "Pikachu:AtLeastOneDeliveryTimeIsRequiredForBlackCat": "Ateast One Delivery Time Is Required For BlackCat",
+    "Pikachu:AtLeastOneDeliveryTimeIsRequiredForSelfPickup": "AtLeast One Delivery Time Is Required For SelfPickup",
+    "Pikachu:AtLeastOneDeliveryTimeIsRequiredForHomeDelivery": "AtLeast One Delivery Time Is Required For Home Delivery ",
     "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "Selling Price for Items Should Be Equal Or Greater Than 0",
     "CopyToAll": "Copy To All",
     "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
