--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -442,6 +442,7 @@
     "Non Taxable": "Non Taxable",
     "Zero Tax": "Zero Tax",
     "Threshold": "Threshold",
-    "DeliveryTimePreferance": "Delivery Time Preferance"
+    "DeliveryTimePreferance": "Delivery Time Preferance",
+    "SelectGroupBuy": "Select GroupBuy"
   }
 }
