--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -443,6 +443,10 @@
     "Zero Tax": "Zero Tax",
     "Threshold": "Threshold",
     "DeliveryTimePreferance": "Delivery Time Preferance",
-    "SelectGroupBuy": "Select GroupBuy"
+    "SelectGroupBuy": "Select GroupBuy",
+    "Shipped": "Shipped",
+    "ManualStatusUpdate": "Manual Status Update",
+    "Completed": "Completed",
+    
   }
 }
