Commit for 88 not compelete

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -448,7 +448,8 @@
     "SelectGroupBuy": "Select GroupBuy",
     "Shipped": "Shipped",
     "ManualStatusUpdate": "Manual Status Update",
-    "Completed": "Completed"
+    "Completed": "Completed",
+    "SpecialTaxable": "Special Taxable"
 
   }
 }
