--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -467,6 +467,7 @@
     "Zero Tax": "零税",
     "NonTaxable": "免稅",
     "ZeroTax": "零税",
+    "SpecialTaxable": "混合稅率",
     "Threshold": "免運門檻",
     "DeliveryTimePreferance": "收貨時間",
     "SelectGroupBuy": "請選擇團購",
