--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -97,6 +97,7 @@
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForBlackCat": "Ateast One Delivery Time Is Required For BlackCat",
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForSelfPickup": "AtLeast One Delivery Time Is Required For SelfPickup",
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForHomeDelivery": "AtLeast One Delivery Time Is Required For Home Delivery ",
+    "Pikachu:AtLeastOneDeliveryTimeIsRequiredForDeliverdByStore": "AtLeast One Delivery Time Is Required For Deliverd By Store",
     "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "Selling Price for Items Should Be Equal Or Greater Than 0",
     "CopyToAll": "Copy To All",
     "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
@@ -449,7 +450,8 @@
     "Shipped": "Shipped",
     "ManualStatusUpdate": "Manual Status Update",
     "Completed": "Completed",
-    "SpecialTaxable": "Special Taxable"
+    "SpecialTaxable": "Special Taxable",
+    "DeliveredByStore": "Delivered By Store"
 
   }
 }
