--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -384,27 +384,29 @@
     "CustomTitle": "Custom Title",
     "MainIslands": "Main Islands",
     "OuterIslands": "Outer Islands",
-    "TaipeiCity": "Taipei City",
-    "NewTaipeiCity": "New Taipei City",
-    "Keelung": "Keelung",
-    "Hsinchu": "Hsinchu",
-    "Taoyuan": "Taoyuan",
-    "Yilan": "Yilan",
-    "Taichung": "Taichung",
-    "Miaoli": "Miaoli",
-    "Changhua": "Changhua",
-    "Nantou": "Nantou",
-    "Yunlin": "Yunlin",
-    "Kaohsiung": "Kaohsiung",
-    "Tainan": "Tainan",
-    "ChiayiCity": "Chiayi City",
-    "ChiayiCounty": "Chiayi County",
-    "PingDong": "Ping Dong",
-    "Hualien": "Hualien",
-    "Taitung": "Taitung",
-    "Penghu": "Penghu",
-    "Kinmen": "Kinmen",
-    "Mazu": "Mazu",
+    "TaipeiCity": "臺北市",
+    "NewTaipeiCity": "新北市",
+    "Keelung": "基隆市",
+    "Hsinchu": "新竹市",
+    "Taoyuan": "桃園市",
+    "HsinchuCounty": "新竹縣",
+    "Yilan": "宜蘭縣",
+    "Taichung": "臺中市",
+    "Miaoli": "苗栗縣",
+    "Changhua": "彰化縣",
+    "Nantou": "南投縣",
+    "Yunlin": "雲林縣",
+    "Kaohsiung": "高雄市",
+    "Tainan": "臺南市",
+    "ChiayiCity": "嘉義市",
+    "ChiayiCounty": "嘉義縣",
+    "PingDong": "屏東縣",
+    "Hualien": "花蓮縣",
+    "Taitung": "臺東縣",
+    "OuterIsland": "外島",
+    "Penghu": "澎湖縣",
+    "Kinmen": "金門縣",
+    "Mazu": "連江縣",
     "AreYouSureToUpdateGreenWorld?": "Are You Sure To Update Green World Logistics?",
     "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?",
     "ShortCode": "Short Code",
@@ -452,6 +454,8 @@
     "Completed": "Completed",
     "SpecialTaxable": "Special Taxable",
     "DeliveredByStore": "Delivered By Store"
+
+
 
   }
 }
