--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -259,7 +259,9 @@
     "PrintOrder": "Print Order",
     "OrderInformation": "Order Information",
     "TaxNumber": "Tax Number",
+    "TaxTitle": "Tax Title",
     "InvoiceCarrier": "Invoice Carrier",
+    "CarrierNumber": "Carrier Number",
     "ApplyRefund": "Apply Refund",
     "ShipmentNotify": "Shipment Notify",
     "Recipient": "Recipient",
