--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -255,8 +255,10 @@
     "Print": "列印",
     "PrintOrder": "列印訂單",
     "OrderInformation": "訂購人資訊",
-    "TaxNumber": "統編",
+    "TaxNumber": "統一編號",
+    "CarrierNumber": "載具號碼",
     "InvoiceCarrier": "載具",
+    "TaxTitle": "發票抬頭",
     "ApplyRefund": "執行退款",
     "ShipmentNotify": "物流通知",
     "Recipient": "收貨人",
@@ -273,9 +275,9 @@
     "Permission:AddStoreComments": "新增商家備註",
     "WaitingForPayment": "等待付款中",
     "PrepareShipment": "處理中",
-    "PersonalInvoice": "Personal Invoice",
-    "CellphoneInvoice": "Cellphone Invoice",
-    "BusinessInvoice": "Business Invoice",
+    "PersonalInvoice": "個人發票",
+    "CellphoneInvoice": "手機載具",
+    "BusinessInvoice": "統一編號",
     "SaveChanges": "Save Changes",
     "PostOffice": "郵局",
     "SelfPickup": "自取",
