Commit for PIK-9

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -4,6 +4,7 @@
     "GoodPoint": "Good Point",
     "Menu:Home": "Home",
     "Menu:GroupBuyManagement": "Group Buy Management",
+    "Menu:Void": "Void Invoice",
     "Menu:GroupBuyListView": "Group Buy List View",
     "Menu:GroupBuyReports": "Group Buy Reports",
     "Menu:GroupBuyPageConfig": "GroupBuy Page Config",
