--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -4,7 +4,7 @@
     "GoodPoint": "Good Point",
     "Menu:Home": "Home",
     "Menu:GroupBuyManagement": "Group Buy Management",
-    "Menu:Void": "Void Invoice",
+    "Menu:VoidInvoice": "Void Invoice",
     "Menu:GroupBuyListView": "Group Buy List View",
     "Menu:GroupBuyReports": "Group Buy Reports",
     "Menu:GroupBuyPageConfig": "GroupBuy Page Config",
@@ -477,7 +477,22 @@
     "OuterIslandFreight": "Outer Island Freight",
     "Size": "Size",
     "Yes": "Yes",
-    "No": "No"
+    "No": "No",
+    "OrderDelivery": "Order Delivery",
+    "IssueDate": "Issue Date",
+    "DeliveryNo": "Delivery No",
+    "DeliveryMethod": "Delivery Method",
+    "DeliveryStatus": "Delivery Status",
+    "DeliveryTemperature": "Delivery Temperature",
+    "AllPayLogisticsID": "All Pay Logistic Id",
+    "DeliveryCost": "Delivery Cost",
+    "InvoiceNumber": "Invoice Number",
+    "VoidDate": "Void Date",
+    "VoidUser": "Void User",
+    "CreditNoteDate": "Credit Note Date",
+    "CreditNoteUser": "Credit Note User",
+    "VoidReason": "Void Reason",
+    "CreditNoteReason": "Credit Note Reason"
 
 
 
