--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -497,7 +497,8 @@
     "Failed": "Failed",
     "Orignal": "Orignal",
     "Split": "Split",
-    "Combined": "Combined"
+    "Combined": "Combined",
+    "SentToBackStage": "Sent To Back Stage"
 
 
 
