--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -524,8 +524,8 @@
     "Failed": "失敗",
     "Orignal": "原訂單",
     "Split": "拆單",
-    "Combined": "併單"
-
+    "Combined": "併單",
+    "SentToBackStage": "已送達後台"
 
 
 
