--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -384,6 +384,7 @@
     //LogisticsManagement
     "LogisticsProviderSettings": "Logistics Provider Settings",
     "GreenWorldLogistics": "Green World Logistics B2C",
+    "GreenWorldLogisticsC2C": "Green World Logistics C2C",
     "SenderPhoneNumber": "Sender Phone Number",
     "LogisticsType": "Logistics Type",
     "LogisticsSubType": "Logistics Sub Type",
@@ -434,7 +435,7 @@
     "Cm0002": "0002: 90cm",
     "Cm0003": "0003: 120cm",
     "Cm0004": "0004: 150cm",
-
+    "7-11C2C": "7-11 C2C",
     "SevenToEleven1": "7-11",
     "SevenToElevenC2C": "7-11 C2C",
     "FamilyMart1": "Family Mart",
