--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -391,6 +391,7 @@
     //LogisticsManagement
     "LogisticsProviderSettings": "物流商設定",
     "GreenWorldLogistics": "綠界物流B2C",
+    "GreenWorldLogisticsC2C": "綠界物流C2C",
     "SenderPhoneNumber": "發送者電話",
     "LogisticsType": "物流類型",
     "LogisticsSubType": "物流子類型",
@@ -493,6 +494,7 @@
     "RecipientPostalCode": "郵遞區號",
     "Editor": "編輯者",
     "FamilyMart": "全家",
+    "FamilyMartC2c": "全家C2C",
     "7-11": "7-11",
     "7-11 frozen": "7-11冷凍",
     "B-Normal": "黑貓常溫",
@@ -525,8 +527,8 @@
     "Orignal": "原訂單",
     "Split": "拆單",
     "Combined": "併單",
-    "SentToBackStage": "已送達後台"
-
+    "SentToBackStage": "已送達後台",
+    "7-11C2C": "7-11 C2C"
 
 
   }
