--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -461,6 +461,8 @@
     "Pikachu:AtLeastOnePaymentMethodIsRequired": "請選擇付款方式",
     "Pikachu:AtLeastOneShippingMethodIsRequired": "請選擇配送方式",
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForBlackCat": "請選擇黑貓取貨時間",
+    "Pikachu:AtLeastOneDeliveryTimeIsRequiredForBlackCatFreeze": "請選擇黑貓冷藏取貨時間",
+    "Pikachu:AtLeastOneDeliveryTimeIsRequiredForBlackCatFrozen": "請選擇黑貓冷凍取貨時間",
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForSelfPickup": "請選擇自取取貨時間",
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForHomeDelivery": "請選擇親送取貨時間",
     "Pikachu:AtLeastOneDeliveryTimeIsRequiredForDeliverdByStore": "請選擇廠商統一出貨時間",
@@ -533,7 +535,7 @@
     "VoidInvoice": "作廢發票",
     "IssueCreditNote": "開立折讓",
     "BlackCatFreeze": "黑貓冷藏",
-    "BlackCatFrozen": "黑貓冷凍",
+    "BlackCatFrozen": "黑貓冷凍"
 
 
   }
