--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -506,7 +506,8 @@
     "VoidInvoice": "Void Invoice",
     "IssueCreditNote": "Issue Credit Note",
     "BlackCatFreeze": "Black Cat Freeze",
-    "BlackCatFrozen": "Black Cat Frozen"
+    "BlackCatFrozen": "Black Cat Frozen",
+    "SetGroupBuyPrice": "Set GroupBuy Price"
 
 
 
