--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -508,7 +508,8 @@
     "BlackCatFreeze": "Black Cat Freeze",
     "BlackCatFrozen": "Black Cat Frozen",
     "SetGroupBuyPrice": "Set GroupBuy Price",
-    "InvoiceIssueStatus": "Invoice Issue Status"
+    "InvoiceIssueStatus": "Invoice Issue Status",
+    "Approve": "Approve"
 
 
 
