--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -509,7 +509,8 @@
     "BlackCatFrozen": "Black Cat Frozen",
     "SetGroupBuyPrice": "Set GroupBuy Price",
     "InvoiceIssueStatus": "Invoice Issue Status",
-    "Approve": "Approve"
+    "Approve": "Approve",
+    "Return": "Return"
 
 
 
