--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -510,7 +510,8 @@
     "SetGroupBuyPrice": "Set GroupBuy Price",
     "InvoiceIssueStatus": "Invoice Issue Status",
     "Approve": "Approve",
-    "Return": "Return"
+    "Return": "Return",
+    "PleaseEnterThresholdAmount": "Please Enter Threshold Amount"
 
 
 
